testdata/invalid/invalid_bitflags_unparseable_rhs.bop
[flags]
enum Flags : int64 {
    A = (10 | 1111111111111111111111111111111111111111111111111111111111111111111111);
}